--- a/test.html
+++ b/test.html
@@ -1103,7 +1103,7 @@
                 tr.innerHTML = `
                     <td class="px-4 py-2 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-gray-100">${grsi}</td>
                     <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">
-                        ${config.manual ? '<span class="text-purple-600 dark:text-purple-400 font-medium">Вручную</span>' : config.value}
+                        ${config.manual ? '<span class="text-purple-600 dark:text-purple-400 font-medium">Не задан</span>' : config.value}
                     </td>
                     <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">
                         ${config.manual ? '<span class="px-2 py-1 bg-purple-100 dark:bg-purple-900/30 text-purple-800 dark:text-purple-300 rounded text-xs">Ручной</span>' : '<span class="px-2 py-1 bg-green-100 dark:bg-green-900/30 text-green-800 dark:text-green-300 rounded text-xs">Авто</span>'}
