--- a/test.html
+++ b/test.html
@@ -529,7 +529,7 @@
             
             <div class="mt-4 space-y-4">
                 <form id="snilsMappingForm" class="flex flex-col sm:flex-row gap-2">
-                    <input type="text" id="authorNameInput" placeholder="ФИО автора (как в CSV)" required
+                    <input type="text" id="authorNameInput" placeholder="Фамилия Имя (как в CSV)" required
                            class="flex-1 p-2 border border-gray-300 rounded-lg focus:ring-1 focus:ring-yellow-500 focus:border-yellow-500 text-sm dark:bg-slate-700 dark:border-slate-600 dark:text-white" autocomplete="off">
                     <input type="text" id="snilsInput" placeholder="СНИЛС (11 цифр)" pattern="^\d{11}$" required
                            class="flex-1 p-2 border border-gray-300 rounded-lg focus:ring-1 focus:ring-yellow-500 focus:border-yellow-500 text-sm dark:bg-slate-700 dark:border-slate-600 dark:text-white" autocomplete="off">
