--- a/test.html
+++ b/test.html
@@ -425,7 +425,7 @@
                             <!-- Список авторов и полей ввода будет сгенерирован здесь -->
                         </form>
                         <button id="saveMissingSnilsButton" class="w-full mt-3 bg-red-500 text-white font-bold py-2 rounded-lg hover:bg-red-600 transition-colors duration-200 dark:bg-red-600 dark:hover:bg-red-500">
-                            Сохранить все недостающие СНИЛС
+                            Сохранить недостающие СНИЛС
                         </button>
                     </div>
                 </div>
@@ -441,7 +441,7 @@
                         </h3>
                         <p class="mt-1 text-sm text-orange-700 dark:text-orange-300">
                             Введите Межповерочный Интервал (в месяцах) или "-" для бессрочной поверки для следующих Номеров записи ГРСИ.
-                            <span class="font-medium text-orange-800 dark:text-orange-300">Можно отметить "Вручную" для отложенного ввода по номеру документа.</span>
+                            <span class="font-medium text-orange-800 dark:text-orange-300">Можно отметить "Вручную" для ГРСИ с динамичным МПИ.</span>
                         </p>
                         <!-- ДИНАМИЧЕСКАЯ ФОРМА ДЛЯ БЫСТРОГО ВВОДА МПИ -->
                         <form id="missingMpiForm" class="mt-2 text-sm bg-white dark:bg-orange-900/10 p-3 rounded max-h-56 overflow-y-auto space-y-2 custom-scrollbar">
@@ -472,7 +472,7 @@
                             <!-- Список документов и полей ввода будет сгенерирован здесь -->
                         </form>
                         <button id="saveManualMpiButton" class="w-full mt-3 bg-purple-500 text-white font-bold py-2 rounded-lg hover:bg-purple-600 transition-colors duration-200 dark:bg-purple-600 dark:hover:bg-purple-500">
-                            Сохранить все ручные МПИ
+                            Сохранить МПИ с ручным вводом
                         </button>
                     </div>
                 </div>
@@ -483,7 +483,7 @@
                 <label for="splitOutputCheckbox" class="flex items-center space-x-2 cursor-pointer">
                     <input type="checkbox" id="splitOutputCheckbox" class="h-5 w-5 text-accent-sky border-gray-300 rounded focus:ring-accent-sky dark:border-slate-600 dark:bg-slate-700">
                     <span class="text-gray-700 dark:text-gray-300 font-medium select-none">
-                        Разделить выходные файлы (максимально 1000 записей на файл).
+                        Разделить. Максимально 1000 записей на файл.
                     </span>
                 </label>
             </div>
@@ -522,7 +522,7 @@
             <summary class="flex justify-between items-center cursor-pointer font-semibold text-yellow-800 dark:text-yellow-200 focus:outline-none">
                 <span>
                     <svg class="w-5 h-5 inline-block mr-2 text-yellow-600 dark:text-yellow-400" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" /></svg>
-                    Управление сотрудниками и СНИЛС.
+                    Управление сотрудниками и СНИЛС
                 </span>
                 <svg class="w-4 h-4 text-yellow-600 dark:text-yellow-400 transition-transform duration-200" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
             </summary>
@@ -541,11 +541,11 @@
                 <!-- Добавлены кнопки Импорта/Экспорта СНИЛС -->
                 <div class="flex gap-2">
                     <button id="exportSnilsButton" type="button" class="w-1/2 bg-gray-300 text-gray-800 p-2 rounded-lg font-medium hover:bg-gray-400 transition duration-150 dark:bg-slate-600 dark:text-slate-200 dark:hover:bg-slate-500">
-                        Экспорт JSON
+                        Экспорт
                     </button>
                     <input type="file" id="importSnilsFile" accept=".json" class="hidden">
                     <button id="importSnilsButton" type="button" class="w-1/2 bg-gray-300 text-gray-800 p-2 rounded-lg font-medium hover:bg-gray-400 transition duration-150 dark:bg-slate-600 dark:text-slate-200 dark:hover:bg-slate-500">
-                        Импорт JSON
+                        Импорт
                     </button>
                 </div>
                 
@@ -563,7 +563,7 @@
             <summary class="flex justify-between items-center cursor-pointer font-semibold text-green-800 dark:text-green-200 focus:outline-none">
                 <span>
                     <svg class="w-5 h-5 inline-block mr-2 text-green-600 dark:text-green-400" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-                    Управление ГРСИ и МПИ.
+                    Управление ГРСИ и МПИ
                 </span>
                 <svg class="w-4 h-4 text-green-600 dark:text-green-400 transition-transform duration-200" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
             </summary>
@@ -586,11 +586,11 @@
                 <!-- Добавлены кнопки Импорта/Экспорта МПИ -->
                 <div class="flex gap-2">
                     <button id="exportMpiButton" type="button" class="w-1/2 bg-gray-300 text-gray-800 p-2 rounded-lg font-medium hover:bg-gray-400 transition duration-150 dark:bg-slate-600 dark:text-slate-200 dark:hover:bg-slate-500">
-                        Экспорт JSON
+                        Экспорт
                     </button>
                     <input type="file" id="importMpiFile" accept=".json" class="hidden">
                     <button id="importMpiButton" type="button" class="w-1/2 bg-gray-300 text-gray-800 p-2 rounded-lg font-medium hover:bg-gray-400 transition duration-150 dark:bg-slate-600 dark:text-slate-200 dark:hover:bg-slate-500">
-                        Импорт JSON
+                        Импорт
                     </button>
                 </div>
 
